2012-03-07 Borut Razem <borut.razem AT gmail.com>

	* Makefile.in: copy correct sdbinutils executables to bin

2012-03-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c (getAddrspaceiCode),
	  src/SDCCralloc.hpp (create_cfg): properly handle IFX and
	  JUMPTABLE operands

2012-03-06 Borut Razem <borut.razem AT gmail.com>

	* Makefile.in, support/sdbinutils/binutils/Makefile.am,
	  support/sdbinutils/binutils/Makefile.in,
	  support/scripts/sdcc.nsi,
	  support/sdbinutils/bfd/asxxxx.c,
	  support/sdbinutils/binutils/nm.c:
	  added sdnm sdbinutils utility

2012-03-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed bug #3496508.

2012-03-05 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCicode.c:
	  disable -O2 optimization for gcc 4.6.3, see bug #3285611
	* support/scripts/sdcc_mingw32: minor cosmetical fix
	* configure.in, configure, config.guess, config.sub:
	  added host and build type detection
	* device/lib/pic14/Makefile.in,
	  device/lib/pic14/libm/Makefile.in: regenerated

2012-03-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c (separateAddressSpaces): fixed bug #3476041

2012-03-04 Borut Razem <borut.razem AT gmail.com>

	* doc/README.txt, doc/sdccman.lyx: small corrections
	* src/SDCC.lex: removed forward declaration of non existing
	  function deprecated_keyword(), removed macro TKEYWORDSDCC
	* support/cpp/opts.c, support/cpp/sdcpp.c,
	  support/cpp/version.c, support/cpp/version.h:
	  updated version to 4.6.3

2012-03-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	* src/SDCCerr.c,
	* src/SDCCerr.h,
	* src/SDCC.y: fix struct/union tag scope problems
	  (including bug #3487670)
	* support/regression/tests/structscope.c: new tests

2012-03-03 Borut Razem <borut.razem AT gmail.com>

	* support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/ucz180/spec.mk:
	  simulation timeout doubled due to several tests